# my-wishlist

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  README.md  bun.lockb  docker-compose.yml  formatDesktopLocales.ts  knip.json  makefile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  turbo.json
.github/: renovate.json  setup.yml
.github/setup/: action.yml
.github/workflows/: ci.yml  desktop-deploy.yml  migrate.yml  mobile-build.yml  update.yml
apps/desktop/: .eslintrc.json  eslint.config.js  global.d.ts  next.config.js  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/desktop/locales/: en.json  fr.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/app/: layout.tsx  page.tsx
apps/desktop/src/components/: Appbar.tsx  providers.tsx
apps/mobile/: .eslintrc.json  app.json  babel.config.js  eas.json  eslint.config.mjs  metro.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/: .eslintrc.json  eslint.config.js  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: middleware.ts
apps/web/src/api/: mw.ts  (+2 more)
tooling/eslint/: base.js  index.ts  next.js  package.json  react.js  tsconfig.json
tooling/tailwind/: base.ts  eslint.config.js  package.json  tsconfig.json
tooling/typescript/: base.json  internal-package.json  package.json
(+252 files in other folders)
