[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.3", features = [] }

[dependencies]
serde_json = "1.0.125"
serde = { version = "1.0.208", features = ["derive"] }
tauri = { version = "2.0.0-rc.3", features = [] }
tauri-plugin-store = "2.0.0-rc.0"
tauri-plugin-os = "2.0.0-rc.0"
